# sigrok2ega

./: CMakeLists.txt  README.md  main.cpp  makefile  sigrok2ega.c  sigrok2ega2.c
data/: VEGA-2.7z  VEGA.7z
